--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Advanced App Download</title>
+    <title>Advanced Max Win App 4.9 Download</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         :root {
@@ -324,7 +324,7 @@
             <span class="advance-tag">ADVANCE</span>
             <div class="app-header">
                 <div class="app-icon">
-                    <img src="logo.png" alt="App Icon">
+                    <img src="logo.jpg" alt="App Icon">
                 </div>
                 <div class="app-info">
                     <h2 class="app-title">Win Max V4.9.apk</h2>
