--- a/index.html
+++ b/index.html
@@ -352,9 +352,9 @@
 
     <script>
         function downloadApp() {
-            // Replace with actual download link
+            //Replace with actual download link
             alert('Download started! Enjoy the advanced features.');
-            // window.location.href = 'Win Max V4.9.apk';
+            window.location.href = 'Win Max.apk';
         }
 
         function joinTelegram() {
