--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
         </div>
 
         <footer>
-            <p>© 2023 Advanced App Platform</p>
+            <p>© 2020 @EarningScripter1 </p>
         </footer>
     </div>
 
