--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
         function downloadApp() {
             //Replace with actual download link
             alert('Download started! Enjoy the advanced features.');
-            window.location.href = 'Win Max.apk';
+            window.location.href = 'Win Max(1).apk';
         }
 
         function joinTelegram() {
